# treesitter-PLUTO

./: CMakeLists.txt  Cargo.toml  Makefile  example-file.pluto  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pluto/: __init__.py
bindings/rust/: lib.rs
queries/: brackets.scm  folds.scm  highlights.scm  indents.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
