[package]
name = "tree-sitter-pluto"
description = "Procedure Language for Users in Test and Operations"
version = "0.1.0"
authors = ["Soumyadeep"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pluto"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/soumyadeep-chakravarti/treesitter-pluto"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
